--- a/html/index.html
+++ b/html/index.html
@@ -178,7 +178,7 @@
                         </div>
 
                         <a href="https://www.npostart.nl/dwars-door-de-week/BV_101384492" title="" class="npo-episode-header-program-info">
-                            <img src="https://images2.persgroep.net/rcs/1On51oxSo2NHu42Ab8MBGj0315U/diocontent/128284845/_crop/1/45/699/394/_fitwidth/763?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.8" alt=""> Dwars Door De Week >
+                            <img src="../images/dwars.jpg" alt=""> Dwars Door De Week >
                         </a>
 
                         <div class="share-footer">
@@ -250,7 +250,6 @@
                                     <div class="npo-asset-tile-new">nieuw</div>
                                     <div class="npo-asset-tile-play "></div>
                                     <div class="npo-asset-tile-watched">bekeken</div>
-
 
                                     <div class="npo-asset-tile-progress">
                                         <div class="npo-asset-tile-progress-bar" style="width: 0%"></div>
@@ -543,7 +542,6 @@
         <npo-toast></npo-toast>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-    <script src="https://www.npostart.nl/js/app.js?v=release-1.56.0" type="text/javascript"></script>
     <script>
         var getAccountProfile = function(callback) {
             if (document.cookie.indexOf("isAuthenticatedUser=") >= 0) {
